--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prepare": "husky || true",
+    "prepare": "npx husky",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -30,6 +31,7 @@
     "eslint-config-next": "15.3.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.4",
     "typescript": "^5"
